// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image snapshots image renders 1`] = `
<Group>
  <Image
    height={20}
    image={null}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    width={20}
    x={5}
    y={5}
  />
</Group>
`;

exports[`Image snapshots tooltip renders 1`] = `
<Group>
  <Image
    height={20}
    image={null}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    width={20}
    x={5}
    y={5}
  />
</Group>
`;

exports[`Image snapshots x y position renders 1`] = `
<Group>
  <Image
    height={20}
    image={null}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    width={20}
    x={10}
    y={10}
  />
</Group>
`;
